# Iron-agent

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  cli-agent-architecture.md  iron.example.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE-v2.md  ARCHITECTURE.md  USER_GUIDE.md  V4.0-ASSESSMENT.md  architecture-framework.md  cli-ux-plan.md  evaluation-v3.md  gap-analysis.md  implementation-plan-v3.md  v2-design.md
docs/plans/: COORDINATOR-V4.md  COORDINATOR.md  phase-2-midterm.md  phase-3-longterm.md  track-1-engine-split.md  track-10-tree-sitter-bootstrap.md  track-2-main-split.md  track-3-stream-recovery.md  track-4-lsp-integration.md  track-5-git-tools.md  track-6-diff-preview.md  track-7-multi-edit.md  track-8-sub-agent.md  track-9-docs-observability.md
iron/: __init__.py  constants.py
iron/agent/: __init__.py  agent_manager.py  context_compactor.py  conversation.py  (+10 more)
scripts/: setup-worktrees.ps1
tests/: test_backend.py  test_bootstrap.py  test_cli_commands.py  test_code_indexer.py  test_code_indexer_bootstrap.py  test_context_compactor.py  test_core.py  test_db.py  test_diff_preview.py  test_engine.py  test_engine_integration.py  test_features.py  test_git_tools.py  test_hooks.py  test_lsp.py  test_lsp_integration.py  test_markdown_renderer.py  test_mcp.py  test_mcp_client.py  test_memory.py  test_metrics.py  test_multi_edit.py  test_p1_p2_enhancements.py  test_patch.py  test_permission.py  test_permission_rules.py  test_plugins.py  test_progressive_compaction.py  test_prompt_cache.py  test_prompt_cache_hit_rate.py  test_pubsub.py  test_remote.py  test_sandbox.py  test_security.py  test_semantic_tools.py  test_skills_executable.py  test_stop_hooks.py  test_stream_buffer.py  test_sub_agent.py  test_task_agent.py  (+7 more)
(+81 files in other folders)
